# Telco-Churn-Predictor

./: Customer_Churn_Prediction.ipynb  README.md  app.py  churn_model.pkl  feature_engineering.py  pyproject.toml  requirements.txt
