[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib==1.5.3",
    "matplotlib>=3.11.0",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "scikit-learn==1.6.1",
    "shap==0.51.0",
    "streamlit>=1.58.0",
    "xgboost==3.2.0",
]
